Development
	Implement Edit->Switch Audio Track
	When the playlist is visible there is a new icon (folder). Clicking this allows you to 
		Select a folder and all the media under that folder is added to the playlist, works recursivly
	Implement two requested GUI changes, fullscreen on double click and hotkey 'q' to quit
	Move aspect changes from main view menu to submenu named aspect under view
	Implement View->Show Subtitles
	Implement multi-select on File->Open dialog
	Add 16:10 aspect
	Remove direct gtk call from thread (gtk_main_iteration), bad idea to call this from thread
	Fix stupid memory free in parse_cdda
	Fix potential segfault in cdartist/cdname code
	Apply change to addmulti patch to allow opening playlists in the add to playlist dialog
	Apply 'addmulti' patch from James Carthew
	Add softvol option to Edit->Preferences Advanced tab
	Change mplayer option -softvol to -af volume seems to help (DELETED)
	Try to eliminate some memory leaks
	Fix a couple of possible NULL pointer issues
0.5.4
	Fix up on GUI issues
	When playing audio files don't smash window when playlist is hidden and then reopened
	CDDB support added into the parse cdda code, may need to implement fallback for non-cddb enabled mplayer
	Handle events from gnome-keybinding-properties, player now listens for dbus messages and handles them
		events: Play, Previous, Next, Stop
	Subtitles should now work now, set them with either 
		--subtitle on the command line 
		or by right clicking on the playlist panel and adding a subtitle to an item on the playlist
	Add view menu options for changing the aspect ratio of the media
	GUI for setting subtitles, but it doesn't actually use the subtitle yet
	Fix all kinds GTK warnings when a bad commandline option is issued
	Make mouse disappear when panel disappears
	Make control panel disappear in FS mode after 5 seconds of no mouse movement
	More shortcuts
	Some GUI Polish
	On Popup->Save As, set default filename to filename from URL